--- a/rulebooks/webhook-example.yml
+++ b/rulebooks/webhook-example.yml
@@ -1,7 +1,6 @@
 ---
 - name: Listen for events on a webhook
   hosts: all
-  ## Define our source for events
   sources:
     - ansible.eda.webhook:
         host: 0.0.0.0
@@ -9,13 +8,11 @@
   ## Define the conditions we are looking for
   rules:
     - name: Say Hello
-      condition: event.payload.message == "Ansible is super cool"
+      condition: event.payload.message == "oi"
   ## Define the action we should take should the condition be met
       action:
-        run_playbook:
-          name: say-what.yml
+        debug:
 
 # curl -H 'Content-Type: application/json' -d "{\"message\": \"Ansible is alright\"}" 127.0.0.1:5000/endpoint
 # curl -H 'Content-Type: application/json' -d "{\"message\": \"Ansible is super cool\"}" 127.0.0.1:5000/endpoint
-
 
