--- a/rulebooks/webhook-example.yml
+++ b/rulebooks/webhook-example.yml
@@ -11,7 +11,9 @@
       condition: event.payload.message == "oi"
   ## Define the action we should take should the condition be met
       action:
-        debug:
+        run_job_template:
+          name: "Demo Job Template"
+          organization: Default
 
 # curl -H 'Content-Type: application/json' -d "{\"message\": \"Ansible is alright\"}" 127.0.0.1:5000/endpoint
 # curl -H 'Content-Type: application/json' -d "{\"message\": \"Ansible is super cool\"}" 127.0.0.1:5000/endpoint
